--- a/Tarea4_Proyecto_1_CV/Experience.html
+++ b/Tarea4_Proyecto_1_CV/Experience.html
@@ -14,8 +14,11 @@
 
 <body>
     <div id="menu-placeholder"></div>
-    <div class="container">Work Experience</div>
-    <br>
+    <div class="container">
+        <div class="titulo">
+            <h1 class="text">Work Experience</h1>
+        </div>
+    </div>
     <div >
         <table class="container">
             <thead >
@@ -31,7 +34,7 @@
                     <td>PHC Ingenieros Consultores</td>
                     <td>2023</td>
                     <td>2023</td>
-                    <td>2</td>
+                    <td>hgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgj2</td>
                 </tr>
                 <tr class="elemento">
                     <td>Airbnb Host</td>
@@ -44,45 +47,65 @@
                     <td>Consulting Services</td>
                     <td>2020</td>
                     <td>2023</td>
-                    <td>2</td>
+                    <td>
+                        <div>Preparation of plans, documents, and construction management:</div>
+                        <div>• Technical Director: Engineering project of a 80 m² remodeling and expansion house in San Francisco, Heredia, Heredia.</div>
+                        <div>• Technical Director: Engineering project of a 90 m² remodeling and expansion house in Montes de Oca, San José.</div>
+                        <div>• Technical Director: Engineering public meeting project of 50 m² ranch in Barva, Barva, Heredia.</div>
+                        <div>• Technical Director: Engineering project for a 54 m² new house in Corozalito, Nandayure, Guanacaste.</div>
+                        <div>• Technical Director: Engineering project of 240 m2 with two apartments in Mercedes, Heredia, Heredia</div>
+                        <div>• Technical Director: Engineering project of 160 m² with two apartments in San Roque, Barva, Heredia.</div>
+                        <div>• Technical Director: Engineering project of 100 m² remodeling house in Quesada, San Carlos, Alajuela.</div>
+                        <div>• Technical Director: Engineering project of 125 m² remodeling and expansion of a house in Barva, Barva, Heredia.</div>
+                    </td>
 
                 </tr>
                 <tr class="elemento">
                     <td>Plataforma Internacional Real S.A.</td>
                     <td>2022</td>
                     <td>2022</td>
-                    <td>2</td>
+                    <td>• Technical Director: Engineering project project for the remodeling and expansion of an 110 m² dining area.
+                    </td>
 
                 </tr>
                 <tr class="elemento2">
                     <td>Beneficio La Sylvia Ltda.</td>
                     <td>2019</td>
                     <td>2022</td>
-                    <td>2</td>
+                    <td><div>Professional Services for the Environmental Management Department at Beneficio La Sylvia Ltda.</div>
+                    <div>• Technical Director: Engineering project for the remodeling of 90 m² in administrative offices.</div>
+                    <div>• Design of sanitation systems for the implementation of the Ecological Blue Flag Program in the Climate Change
+                    categories.</div>
+                    <div>• Emergency Preparedness and Response Plan: Assessment of the workplace, structural and non-structural conditions of the
+                    buildings, drafting of plans, and mapping of evacuation routes.</div>
+                </td>
 
                 </tr>
                 <tr class="elemento">
                     <td>Constructora Samagu S.A.</td>
                     <td>2019</td>
                     <td>2020</td>
-                    <td>2</td>
-                </tr>
+                    <td><div>Project Engineer, Constructora Samagu S.A.</div>
+                    <div>• Construction and remodeling of the Student Promotion Gymnasium and the Topography School building at UNA, Heredia.</div>
+                    <div>• Construction of offices at UNA, Coto Brus campus.</div>
+                    </tr>
                 <tr class="elemento2">
                     <td>Constructora Samagu S.A.</td>
                     <td>2018</td>
                     <td>2018</td>
-                    <td>2</td>
-
+                    <td><div>Professional Internship: Engineering Assistant at Constructora Samagu S.A.</div>
+                        <div>• Remodeling of offices and warehouses for the Municipality of Barva, Heredia.</div>
+                        <div>• Remodeling of the wastewater treatment plant in La Aurora, Heredia.</div>
+                        <div>• Construction of a covered walkway and remodeling of sanitary areas at Emma Gamboa School, Montes de Oca.</div>                              
+                    </td>
                 </tr>
                 <tr class="elemento">
                     <td>Angel Fire Resort, New Mexico, United States</td>
                     <td>2016</td>
                     <td>2017</td>
-                    <td>2</td>
-
+                    <td>Winter hotel internship: Customer service and assistance in English, ISC Connection Group.</td>
                 </tr>
             </tbody>
-
         </table>
     </div>
 
