Work Experience done

--- a/Tarea4_Proyecto_1_CV/Experience.html
+++ b/Tarea4_Proyecto_1_CV/Experience.html
@@ -30,41 +30,54 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="elemento2">
-                    <td>PHC Ingenieros Consultores</td>
-                    <td>2023</td>
-                    <td>2023</td>
-                    <td>hgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgjhgj2</td>
-                </tr>
-                <tr class="elemento">
-                    <td>Airbnb Host</td>
-                    <td>2022</td>
-                    <td>2024</td>
-                    <td>2</td>
+                
 
-                </tr>
                 <tr class="elemento2">
                     <td>Consulting Services</td>
                     <td>2020</td>
-                    <td>2023</td>
+                    <td>2024</td>
                     <td>
-                        <div>Preparation of plans, documents, and construction management:</div>
-                        <div>• Technical Director: Engineering project of a 80 m² remodeling and expansion house in San Francisco, Heredia, Heredia.</div>
-                        <div>• Technical Director: Engineering project of a 90 m² remodeling and expansion house in Montes de Oca, San José.</div>
-                        <div>• Technical Director: Engineering public meeting project of 50 m² ranch in Barva, Barva, Heredia.</div>
-                        <div>• Technical Director: Engineering project for a 54 m² new house in Corozalito, Nandayure, Guanacaste.</div>
-                        <div>• Technical Director: Engineering project of 240 m2 with two apartments in Mercedes, Heredia, Heredia</div>
-                        <div>• Technical Director: Engineering project of 160 m² with two apartments in San Roque, Barva, Heredia.</div>
-                        <div>• Technical Director: Engineering project of 100 m² remodeling house in Quesada, San Carlos, Alajuela.</div>
-                        <div>• Technical Director: Engineering project of 125 m² remodeling and expansion of a house in Barva, Barva, Heredia.</div>
+                        <div>Preliminary studies, 3D modeling design, construction and architectural plans, technical direction of execution and site control:</div>
+                        <div>• Engineering project of a 34 m² tiny house in Hojancha, Hojancha, Guanacaste.</div>
+                        <div>• Engineering project of a 80 m² remodeling and expansion house in San Francisco, Heredia, Heredia.</div>
+                        <div>• Engineering project of a 90 m² remodeling and expansion house in Montes de Oca, San José.</div>
+                        <div>• Engineering public meeting project of 50 m² ranch in Barva, Barva, Heredia.</div>
+                        <div>• Engineering project for a 54 m² new house in Corozalito, Nandayure, Guanacaste.</div>
+                        <div>• Engineering project of 240 m² with two apartments in Mercedes, Heredia, Heredia</div>
+                        <div>• Engineering project of 160 m² with two apartments in San Roque, Barva, Heredia.</div>
+                        <div>• Engineering project of 100 m² remodeling house in Quesada, San Carlos, Alajuela.</div>
+                        <div>• Engineering project of 125 m² remodeling and expansion of a house in Barva, Barva, Heredia.</div>
                     </td>
+
+                    <tr class="elemento">
+                        <td>PHC Ingenieros Consultores</td>
+                        <td>2023</td>
+                        <td>2023</td>
+                        <td>
+                            <div>Project Engineer:</div>
+                            <div>• 3D modeling, budget calculation and resident engineer at the construction of 240 m² new house in Pozos, Santa Ana, San José.</div>
+                            <div>• Engineering industrial project Pequeño Mundo Herradura: Peliminary studies, paperwork and documents for the license construction.</div>
+                            <div>• Engineering project Condominium Latitud: Master plan, preliminary studies, paperwork and documents for the construction of a residential condominium with 94 units.</div>
+                            <div>• Engineering project Condominium Arenal: Master plan, preliminary studies, paperwork and documents for the construction of a residential condominium with 10 units.</div>
+                            <div>• 3D modeling and budget calculation for the remodeling of a 124 m² residential apartment located in the United States.</div>
+                            <div>• Construction of 240 m² new house in Pozos, Santa Ana, San José</div>
+                            <div>• Visual Property Inspection for Purchase Evaluation.</div>
+                        </td>
+                    </tr>
+
+                    <tr class="elemento2">
+                        <td>Airbnb Host</td>
+                        <td>2022</td>
+                        <td>2024</td>
+                        <td>Super Host for Terraluna Airbnb Apartament in Cudad Quesada, San Carlos, Alajuela.</td>
+                    </tr>
 
                 </tr>
                 <tr class="elemento">
                     <td>Plataforma Internacional Real S.A.</td>
                     <td>2022</td>
                     <td>2022</td>
-                    <td>• Technical Director: Engineering project project for the remodeling and expansion of an 110 m² dining area.
+                    <td>Engineering project for the remodeling and expansion of a 110 m² dining area.
                     </td>
 
                 </tr>
@@ -85,7 +98,7 @@
                     <td>Constructora Samagu S.A.</td>
                     <td>2019</td>
                     <td>2020</td>
-                    <td><div>Project Engineer, Constructora Samagu S.A.</div>
+                    <td><div>Project Engineer:</div>
                     <div>• Construction and remodeling of the Student Promotion Gymnasium and the Topography School building at UNA, Heredia.</div>
                     <div>• Construction of offices at UNA, Coto Brus campus.</div>
                     </tr>
@@ -100,10 +113,15 @@
                     </td>
                 </tr>
                 <tr class="elemento">
-                    <td>Angel Fire Resort, New Mexico, United States</td>
+                    <td>Angel Fire, New Mexico, United States</td>
                     <td>2016</td>
                     <td>2017</td>
-                    <td>Winter hotel internship: Customer service and assistance in English, ISC Connection Group.</td>
+                    <td>
+                        <div>Winter hotel internship:</div>
+                        <div>• Customer service and assistance at Angel Fire Resort.</div>
+                        <div>• Bartending at Summit Haus Bar Restaurant.</div>
+                        <div>• Bartending at Sunset Bar Restaurant.</div>
+                    </td>
                 </tr>
             </tbody>
         </table>
