--- a/Tarea4_Proyecto_1_CV/Experience.html
+++ b/Tarea4_Proyecto_1_CV/Experience.html
@@ -57,8 +57,8 @@
                             <div>Project Engineer:</div>
                             <div>• 3D modeling, budget calculation and resident engineer at the construction of 240 m² new house in Pozos, Santa Ana, San José.</div>
                             <div>• Engineering industrial project Pequeño Mundo Herradura: Peliminary studies, paperwork and documents for the license construction.</div>
-                            <div>• Engineering project Condominium Latitud: Master plan, preliminary studies, paperwork and documents for the construction of a residential condominium with 94 units.</div>
-                            <div>• Engineering project Condominium Arenal: Master plan, preliminary studies, paperwork and documents for the construction of a residential condominium with 10 units.</div>
+                            <div>• Engineering project Condominium Latitud: Master plan, preliminary studies, paperwork and documents for a condominium with 94 units.</div>
+                            <div>• Engineering project Condominium Arenal: Master plan, preliminary studies, paperwork and documents for a condominium with 10 units.</div>
                             <div>• 3D modeling and budget calculation for the remodeling of a 124 m² residential apartment located in the United States.</div>
                             <div>• Construction of 240 m² new house in Pozos, Santa Ana, San José</div>
                             <div>• Visual Property Inspection for Purchase Evaluation.</div>
