--- a/Tarea4_Proyecto_1_CV/menuCV.html
+++ b/Tarea4_Proyecto_1_CV/menuCV.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Datos_personales.html">Personal Data</a>
+                    <a class="nav-link active" aria-current="page" href="Personal_Data.html">Personal Data</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -20,7 +20,7 @@
                         <li><a class="dropdown-item" href="Academic_Background.html">Academic Background</a></li>
                         <li><a class="dropdown-item" href="languages.html">languages</a></li>
                         <li><a class="dropdown-item" href="Certifications.html">Certifications</a></li>
-                        <li><a class="dropdown-item" href="Additional_data.html">Additional data</a></li>
+                        <li><a class="dropdown-item" href="Additional_Data.html">Additional data</a></li>
                     </ul>
                 </li>
             </ul>
