--- a/Tarea4_Proyecto_1_CV/Personal_Data.html
+++ b/Tarea4_Proyecto_1_CV/Personal_Data.html
@@ -53,18 +53,18 @@
             </tbody>
         </table>
     </div>
-
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         $(function () {
-            $('#menu-placeholder').load('menuCV.html');
+            $('#menu-placeholder').load('Menu.html');
         })
     </script>
-        <style>
-            th,td {
-                border: 1px solid black;
-                padding: 10px;
-            }
-        </style>
+    <style>
+        th,td {
+            border: 1px solid black;
+            padding: 10px;
+        }
+    </style>
 </body>
 </html>
