--- a/Tarea4_Proyecto_1_CV/menuCV.html
+++ b/Tarea4_Proyecto_1_CV/menuCV.html
@@ -16,7 +16,7 @@
                         Sections
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="Experience.html">Work Experience</a></li>
+                        <li><a class="dropdown-item" href="Work_Experience.html">Work Experience</a></li>
                         <li><a class="dropdown-item" href="Academic_Background.html">Academic Background</a></li>
                         <li><a class="dropdown-item" href="languages.html">languages</a></li>
                         <li><a class="dropdown-item" href="Certifications.html">Certifications</a></li>
