--- a/Tarea4_Proyecto_1_CV/Academic_Background.html
+++ b/Tarea4_Proyecto_1_CV/Academic_Background.html
@@ -5,23 +5,10 @@
     <meta charset="UTF-8">
     <title>Currículum Vítae Jorddy</title>
     <link rel="stylesheet" type="text/css" href="css/Jorddy_CV.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
-Educación Colocar los siguientes datos:
-a. Lugar.
-b. Año de graduación.
-c. Título obtenido.
-d. El programador debe buscar la forma de colocar una imagen del
-título obtenido.
-
 <body>
     <div id="menu-placeholder"></div>
-
     <div class="container">
         <div class="titulo">
             <h1 class="text">Academic Background</h1>
@@ -47,17 +34,19 @@ título obtenido.
         </table>
     </div>
     <div class="container">
-        <img src="./img/Titulo UCR Lic Ing Civil.jpeg">        
+        <div class="imagenUCR">
+            <img src="./img/Titulo UCR Lic Ing Civil.jpeg">
+        </div>        
     </div>
-    
-
-        
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script>
-            $(function () {
-                $('#menu-placeholder').load('menuCV.html');
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="js/Acadenic_Background.js"></script>
+    <script>
+        $(function () {
+                $('#menu-placeholder').load('.menuCV.html');
             })
-        </script>
+    </script>
+
 </body>
 
 </html>
