--- a/Tarea4_Proyecto_1_CV/2Academic_Background.html
+++ b/Tarea4_Proyecto_1_CV/2Academic_Background.html
@@ -40,12 +40,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="js/Acadenic_Background.js"></script>
-    <script>
-        $(function () {
-                $('#menu-placeholder').load('.menuCV.html');
-            })
-    </script>
+    <script src="/Tarea4_Proyecto_1_CV/js/2Acadenic_Background.js"></script>
 
 </body>
 
