--- a/Tarea4_Proyecto_1_CV/menuCV.html
+++ b/Tarea4_Proyecto_1_CV/menuCV.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Personal_Data.html">Personal Data</a>
+                    <a class="nav-link active" aria-current="page" href="0Personal_Data.html">Personal Data</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -16,11 +16,11 @@
                         Sections
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="Work_Experience.html">Work Experience</a></li>
-                        <li><a class="dropdown-item" href="Academic_Background.html">Academic Background</a></li>
-                        <li><a class="dropdown-item" href="languages.html">languages</a></li>
-                        <li><a class="dropdown-item" href="Certifications.html">Certifications</a></li>
-                        <li><a class="dropdown-item" href="Additional_Data.html">Additional data</a></li>
+                        <li><a class="dropdown-item" href="1Work_Experience.html">Work Experience</a></li>
+                        <li><a class="dropdown-item" href="2Academic_Background.html">Academic Background</a></li>
+                        <li><a class="dropdown-item" href="3languages.html">languages</a></li>
+                        <li><a class="dropdown-item" href="4Certifications.html">Certifications</a></li>
+                        <li><a class="dropdown-item" href="5Additional_Data.html">Additional data</a></li>
                     </ul>
                 </li>
             </ul>
