update tarea 4 academic background

--- a/Tarea4_Proyecto_1_CV/1Work_Experience.html
+++ b/Tarea4_Proyecto_1_CV/1Work_Experience.html
@@ -32,12 +32,14 @@
                             <td>
                                 <div>Preliminary studies, 3D modeling design, construction and architectural plans, technical direction of execution and site control:</div>
                                 <div>• Engineering project of a 34 m² tiny house in Hojancha, Hojancha, Guanacaste.</div>
-                                <div>• Engineering project of a 80 m² remodeling and expansion house in San Francisco, Heredia, Heredia.</div>
-                                <div>• Engineering project of a 90 m² remodeling and expansion house in Montes de Oca, San José.</div>
+                                <div>• Engineering project of 80 m² remodeling and expansion house in San Francisco, Heredia, Heredia.</div>
+                                <div>• Engineering project of 90 m² remodeling and expansion house in Sabanilla, Montes de Oca, San José.</div>
                                 <div>• Engineering public meeting project of 50 m² ranch in San Pablo, Barva, Heredia.</div>
-                                <div>• Engineering project for a 54 m² new house in Corozalito, Nandayure, Guanacaste.</div>
+                                <div>• Engineering project of a 54 m² new house in Corozalito, Nandayure, Guanacaste.</div>
                                 <div>• Engineering project of 240 m² with two apartments in Mercedes, Heredia, Heredia</div>
                                 <div>• Engineering project of 160 m² with two apartments in San Roque, Barva, Heredia.</div>
+                                <div>• Engineering project of 27 m² tiny house in Montezuma, Puntarenas. Puntarenas</div>
+                                <div>• Engineering project of 120 m² remodeling chalet house in Montezuma, Puntarenas, Puntarenas.</div>
                                 <div>• Engineering project of 100 m² remodeling house in Quesada, San Carlos, Alajuela.</div>
                                 <div>• Engineering project of 125 m² remodeling and expansion of a house in San Pablo, Barva, Heredia.</div>
                             </td>
@@ -127,7 +129,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="/Tarea4_Proyecto_1_CV/js/1Work_Experience.js"></script>
-        
         <style>
             th, td{
                 border: 1px solid black;
