--- a/Tarea4_Proyecto_1_CV/2Academic_Background.html
+++ b/Tarea4_Proyecto_1_CV/2Academic_Background.html
@@ -9,39 +9,35 @@
 </head>
 <body>
     <div id="menu-placeholder"></div>
-    <div class="container">
+    <div>
         <div class="titulo">
             <h1 class="text">Academic Background</h1>
         </div>
     </div>
 
     <div>
-        <table class="container">
+        <table class="container" style="width: 100%;">
             <thead>
                 <tr class="elemento">
-                    <th>Place</th>
-                    <th>Graduation Year</th>
-                    <th>Degree</th>
+                    <th style="text-align: center;">Place</th>
+                    <th style="text-align: center;">Graduation Year</th>
+                    <th style="text-align: center;">Degree</th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="elemento2">
-                    <td>Universidad de Costa Rica</td>
-                    <td>2019</td>
-                    <td>Licenciatura en Ingeniería Civil</td>
+                    <td style="text-align: center;">Universidad de Costa Rica</td>
+                    <td style="text-align: center;">2019</td>
+                    <td style="text-align: center;">Licenciatura en Ingeniería Civil</td>
                 </tr>
             </tbody>
         </table>
-    </div>
-    <div class="container">
-        <div class="imagenUCR">
+        <div style="text-align: center">
             <img src="./img/Titulo UCR Lic Ing Civil.jpeg">
-        </div>        
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/Tarea4_Proyecto_1_CV/js/2Acadenic_Background.js"></script>
-
 </body>
-
 </html>
