cover image work experience

--- a/Tarea4_Proyecto_1_CV/Jorddy_CV.html
+++ b/Tarea4_Proyecto_1_CV/Jorddy_CV.html
@@ -14,7 +14,7 @@
     </div>
     <div class="container">
         <div class="imagenUCR">
-            <img src="./img/Backup 22 marzo 2021 252.JPG.jpeg">
+            <img src="./img/Backup 22 marzo 2021 252.JPG" style="height: 1%;">
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
