--- a/Tarea4_Proyecto_1_CV/1Work_Experience.html
+++ b/Tarea4_Proyecto_1_CV/1Work_Experience.html
@@ -8,124 +8,130 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
+        
         <div id="menu-placeholder"></div>
-            <div class="container">
-                <div class="titulo">
-                    <h1 class="text">Work Experience</h1>
+        <div class="contenedorImagen">
+            <img src="./img/cover_img.JPG" class="contornoImagen">
+            <div class="contenedorImagenPalabras">
+                <div>
+                    <div class="titulo">
+                        <h1 class="text">Work Experience</h1>
+                    </div>
+                </div>
+                <div>
+                    <table>
+                        <thead >
+                            <tr class="elemento">
+                                <th>Place</th>
+                                <th>Start Date</th>
+                                <th>End Date</th>
+                                <th>Tasks performed</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="elemento2">
+                                <td>Consulting Services</td>
+                                <td>2020</td>
+                                <td>2024</td>
+                                <td>
+                                    <div>Preliminary studies, 3D modeling design, construction and architectural plans, technical direction of execution and site control:</div>
+                                    <div>• Engineering project of a 34 m² tiny house in Hojancha, Hojancha, Guanacaste.</div>
+                                    <div>• Engineering project of 80 m² remodeling and expansion house in San Francisco, Heredia, Heredia.</div>
+                                    <div>• Engineering project of 90 m² remodeling and expansion house in Sabanilla, Montes de Oca, San José.</div>
+                                    <div>• Engineering public meeting project of 50 m² ranch in San Pablo, Barva, Heredia.</div>
+                                    <div>• Engineering project of a 54 m² new house in Corozalito, Nandayure, Guanacaste.</div>
+                                    <div>• Engineering project of 240 m² with two apartments in Mercedes, Heredia, Heredia</div>
+                                    <div>• Engineering project of 160 m² with two apartments in San Roque, Barva, Heredia.</div>
+                                    <div>• Engineering project of 27 m² tiny house in Montezuma, Puntarenas. Puntarenas</div>
+                                    <div>• Engineering project of 120 m² remodeling chalet house in Montezuma, Puntarenas, Puntarenas.</div>
+                                    <div>• Engineering project of 100 m² remodeling house in Quesada, San Carlos, Alajuela.</div>
+                                    <div>• Engineering project of 125 m² remodeling and expansion of a house in San Pablo, Barva, Heredia.</div>
+                                </td>
+                            </tr>
+                            <tr class="elemento">
+                                <td>PHC Ingenieros Consultores</td>
+                                <td>2023</td>
+                                <td>2023</td>
+                                <td>
+                                    <div>Project Engineer:</div>
+                                    <div>• 3D modeling, budget calculation and resident engineer at the construction of 240 m² new house in Pozos, Santa Ana, San José.</div>
+                                    <div>• Engineering industrial project Pequeño Mundo Herradura: Peliminary studies, paperwork and documents for the license construction.</div>
+                                    <div>• Engineering project Condominium Latitud: Master plan, preliminary studies, paperwork and documents for a condominium with 94 units.</div>
+                                    <div>• Engineering project Condominium Arenal: Master plan, preliminary studies, paperwork and documents for a condominium with 10 units.</div>
+                                    <div>• 3D modeling and budget calculation for the remodeling of a 124 m² residential apartment located in the United States.</div>
+                                    <div>• Construction of 240 m² new house in Pozos, Santa Ana, San José</div>
+                                    <div>• Visual Property Inspection for Purchase Evaluation.</div>
+                                </td>
+                            </tr>
+                            <tr class="elemento2">
+                                <td>Airbnb Host</td>
+                                <td>2022</td>
+                                <td>2024</td>
+                                <td>
+                                    <div>Super Host for Terraluna Airbnb Apartament in Cudad Quesada, San Carlos, Alajuela.</div>
+                                    <div>
+                                        <a href="https://www.airbnb.co.cr/rooms/31022513?source_impression_id=p3_1719464766_P3oFS1WanmiHZoGw">Feel free to visit my Airbnb! 
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                                                <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                                            </svg>
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="elemento">
+                                <td>Plataforma Internacional Real S.A.</td>
+                                <td>2022</td>
+                                <td>2022</td>
+                                <td>Engineering project for the remodeling and expansion of a 110 m² dining area.</td>
+                            </tr>
+                            <tr class="elemento2">
+                                <td>Beneficio La Sylvia Ltda.</td>
+                                <td>2019</td>
+                                <td>2022</td>
+                                <td>
+                                    <div>Professional Services for the Environmental Management Department at Beneficio La Sylvia Ltda.</div>
+                                    <div>• Technical Director: Engineering project for the remodeling of 90 m² in administrative offices.</div>
+                                    <div>• Design of sanitation systems for the implementation of the Ecological Blue Flag Program in the Climate Change categories.</div>
+                                    <div>• Emergency Preparedness and Response Plan: Assessment of the workplace, structural and non-structural conditions of the buildings, drafting of plans, and mapping of evacuation routes.</div>
+                                </td>
+                            </tr>
+                            <tr class="elemento">
+                                <td>Constructora Samagu S.A.</td>
+                                <td>2019</td>
+                                <td>2020</td>
+                                <td>
+                                    <div>Project Engineer:</div>
+                                    <div>• Construction and remodeling of the Student Promotion Gymnasium and the Topography School building at UNA, Heredia.</div>
+                                    <div>• Construction of offices at UNA, Coto Brus campus.</div>
+                                </td>
+                            </tr>
+                            <tr class="elemento2">
+                                <td>Constructora Samagu S.A.</td>
+                                <td>2018</td>
+                                <td>2018</td>
+                                <td><div>Professional Internship: Engineering Assistant at Constructora Samagu S.A.</div>
+                                    <div>• Remodeling of offices and warehouses for the Municipality of Barva, Heredia.</div>
+                                    <div>• Remodeling of the wastewater treatment plant in La Aurora, Heredia.</div>
+                                    <div>• Construction of a covered walkway and remodeling of sanitary areas at Emma Gamboa School, Montes de Oca.</div>                              
+                                </td>
+                            </tr>
+                            <tr class="elemento">
+                                <td>Angel Fire, New Mexico, United States</td>
+                                <td>2016</td>
+                                <td>2017</td>
+                                <td>
+                                    <div>Winter hotel internship:</div>
+                                    <div>• Customer service and assistance at Angel Fire Resort.</div>
+                                    <div>• Bartending at Summit Haus Bar Restaurant.</div>
+                                    <div>• Bartending at Sunset Bar Restaurant.</div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-            <div>
-                <table class="container">
-                    <thead >
-                        <tr class="elemento">
-                            <th>Place</th>
-                            <th>Start Date</th>
-                            <th>End Date</th>
-                            <th>Tasks performed</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="elemento2">
-                            <td>Consulting Services</td>
-                            <td>2020</td>
-                            <td>2024</td>
-                            <td>
-                                <div>Preliminary studies, 3D modeling design, construction and architectural plans, technical direction of execution and site control:</div>
-                                <div>• Engineering project of a 34 m² tiny house in Hojancha, Hojancha, Guanacaste.</div>
-                                <div>• Engineering project of 80 m² remodeling and expansion house in San Francisco, Heredia, Heredia.</div>
-                                <div>• Engineering project of 90 m² remodeling and expansion house in Sabanilla, Montes de Oca, San José.</div>
-                                <div>• Engineering public meeting project of 50 m² ranch in San Pablo, Barva, Heredia.</div>
-                                <div>• Engineering project of a 54 m² new house in Corozalito, Nandayure, Guanacaste.</div>
-                                <div>• Engineering project of 240 m² with two apartments in Mercedes, Heredia, Heredia</div>
-                                <div>• Engineering project of 160 m² with two apartments in San Roque, Barva, Heredia.</div>
-                                <div>• Engineering project of 27 m² tiny house in Montezuma, Puntarenas. Puntarenas</div>
-                                <div>• Engineering project of 120 m² remodeling chalet house in Montezuma, Puntarenas, Puntarenas.</div>
-                                <div>• Engineering project of 100 m² remodeling house in Quesada, San Carlos, Alajuela.</div>
-                                <div>• Engineering project of 125 m² remodeling and expansion of a house in San Pablo, Barva, Heredia.</div>
-                            </td>
-                        </tr>
-                        <tr class="elemento">
-                            <td>PHC Ingenieros Consultores</td>
-                            <td>2023</td>
-                            <td>2023</td>
-                            <td>
-                                <div>Project Engineer:</div>
-                                <div>• 3D modeling, budget calculation and resident engineer at the construction of 240 m² new house in Pozos, Santa Ana, San José.</div>
-                                <div>• Engineering industrial project Pequeño Mundo Herradura: Peliminary studies, paperwork and documents for the license construction.</div>
-                                <div>• Engineering project Condominium Latitud: Master plan, preliminary studies, paperwork and documents for a condominium with 94 units.</div>
-                                <div>• Engineering project Condominium Arenal: Master plan, preliminary studies, paperwork and documents for a condominium with 10 units.</div>
-                                <div>• 3D modeling and budget calculation for the remodeling of a 124 m² residential apartment located in the United States.</div>
-                                <div>• Construction of 240 m² new house in Pozos, Santa Ana, San José</div>
-                                <div>• Visual Property Inspection for Purchase Evaluation.</div>
-                            </td>
-                        </tr>
-                        <tr class="elemento2">
-                            <td>Airbnb Host</td>
-                            <td>2022</td>
-                            <td>2024</td>
-                            <td>
-                                <div>Super Host for Terraluna Airbnb Apartament in Cudad Quesada, San Carlos, Alajuela.</div>
-                                <div>
-                                    <a href="https://www.airbnb.co.cr/rooms/31022513?source_impression_id=p3_1719464766_P3oFS1WanmiHZoGw">Feel free to visit my Airbnb! 
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-                                            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
-                                        </svg>
-                                    </a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr class="elemento">
-                            <td>Plataforma Internacional Real S.A.</td>
-                            <td>2022</td>
-                            <td>2022</td>
-                            <td>Engineering project for the remodeling and expansion of a 110 m² dining area.</td>
-                        </tr>
-                        <tr class="elemento2">
-                            <td>Beneficio La Sylvia Ltda.</td>
-                            <td>2019</td>
-                            <td>2022</td>
-                            <td>
-                                <div>Professional Services for the Environmental Management Department at Beneficio La Sylvia Ltda.</div>
-                                <div>• Technical Director: Engineering project for the remodeling of 90 m² in administrative offices.</div>
-                                <div>• Design of sanitation systems for the implementation of the Ecological Blue Flag Program in the Climate Change categories.</div>
-                                <div>• Emergency Preparedness and Response Plan: Assessment of the workplace, structural and non-structural conditions of the buildings, drafting of plans, and mapping of evacuation routes.</div>
-                            </td>
-                        </tr>
-                        <tr class="elemento">
-                            <td>Constructora Samagu S.A.</td>
-                            <td>2019</td>
-                            <td>2020</td>
-                            <td>
-                                <div>Project Engineer:</div>
-                                <div>• Construction and remodeling of the Student Promotion Gymnasium and the Topography School building at UNA, Heredia.</div>
-                                <div>• Construction of offices at UNA, Coto Brus campus.</div>
-                            </td>
-                        </tr>
-                        <tr class="elemento2">
-                            <td>Constructora Samagu S.A.</td>
-                            <td>2018</td>
-                            <td>2018</td>
-                            <td><div>Professional Internship: Engineering Assistant at Constructora Samagu S.A.</div>
-                                <div>• Remodeling of offices and warehouses for the Municipality of Barva, Heredia.</div>
-                                <div>• Remodeling of the wastewater treatment plant in La Aurora, Heredia.</div>
-                                <div>• Construction of a covered walkway and remodeling of sanitary areas at Emma Gamboa School, Montes de Oca.</div>                              
-                            </td>
-                        </tr>
-                        <tr class="elemento">
-                            <td>Angel Fire, New Mexico, United States</td>
-                            <td>2016</td>
-                            <td>2017</td>
-                            <td>
-                                <div>Winter hotel internship:</div>
-                                <div>• Customer service and assistance at Angel Fire Resort.</div>
-                                <div>• Bartending at Summit Haus Bar Restaurant.</div>
-                                <div>• Bartending at Sunset Bar Restaurant.</div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
         </div>
+    </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="/Tarea4_Proyecto_1_CV/js/1Work_Experience.js"></script>
