academic background done

--- a/Tarea4_Proyecto_1_CV/1Work_Experience.html
+++ b/Tarea4_Proyecto_1_CV/1Work_Experience.html
@@ -11,7 +11,7 @@
         
         <div id="menu-placeholder"></div>
         <div class="contenedorImagen">
-            <img src="./img/cover_img.JPG" class="contornoImagen">
+            <img src="./img/cover_img.JPG" class="tituloUCR">
             <div class="contenedorImagenPalabras">
                 <div>
                     <div class="titulo">
