--- a/Tarea4_Proyecto_1_CV/2Academic_Background.html
+++ b/Tarea4_Proyecto_1_CV/2Academic_Background.html
@@ -9,31 +9,36 @@
 </head>
 <body>
     <div id="menu-placeholder"></div>
-    <div>
-        <div class="titulo">
-            <h1 class="text">Academic Background</h1>
-        </div>
-    </div>
-
-    <div>
-        <table class="container" style="width: 100%;">
-            <thead>
-                <tr class="elemento">
-                    <th style="text-align: center;">Place</th>
-                    <th style="text-align: center;">Graduation Year</th>
-                    <th style="text-align: center;">Degree</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="elemento2">
-                    <td style="text-align: center;">Universidad de Costa Rica</td>
-                    <td style="text-align: center;">2019</td>
-                    <td style="text-align: center;">Licenciatura en Ingeniería Civil</td>
-                </tr>
-            </tbody>
-        </table>
-        <div style="text-align: center">
-            <img src="./img/tituloUCR.jpeg">
+    <div class="contenedorImagen">
+        <img src="./img/RodrigoFacio.jpg" class="contornoImagen">
+        <div class="contenedorImagenPalabras">
+            <div>
+                <div class="titulo">
+                    <h1 class="text">Academic Background</h1>
+                </div>
+            </div>
+            <div>
+                <table>
+                    <thead>
+                        <tr class="elemento">
+                            <th style="text-align: center;">Institution</th>
+                            <th style="text-align: center;">Graduation Year</th>
+                            <th style="text-align: center;">Degree</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="elemento2">
+                            <td style="text-align: center;">Universidad de Costa Rica</td>
+                            <td style="text-align: center;">2019</td>
+                            <td style="text-align: center;">Licenciatura en Ingeniería Civil</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br>
+                <div style="text-align: center">
+                    <img src="./img/tituloUCR.jpeg">
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
