--- a/Tarea4_Proyecto_1_CV/3languages.html
+++ b/Tarea4_Proyecto_1_CV/3languages.html
@@ -5,15 +5,38 @@
     <meta charset="UTF-8">
     <title>languages</title>
     <link rel="stylesheet" type="text/css" href="css/Jorddy_CV.css">
+    <link rel="stylesheet" type="text/css" href="css/languages.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 
 <body>
     <div id="menu-placeholder"></div>
-    <div class="container">
-        <h1>CV Jorddy</h1>
-    </div>
+        <div class="container">
+            <div class="titulo">
+                <h1 class="text">Languages</h1>
+            </div>
+            <div class="languageES">
+                <h3 class="text">Spanish</h3>
+                <h6>Native Language</h6>
+            </div>
+            <div class="languageEN">
+                <h3 class="text">English</h3>
+                <h6>General level: Advance</h6>
+                <h6>Speaking level: 80%</h6>
+                <h6>Writing level: 90%</h6>
+            </div>
+            <div class="languagePT">
+                <h3 class="text">Portuguese</h3>
+                <h6>General level: Elementary</h6>
+                <h6>Speaking level: 35%</h6>
+                <h6>Writing level: 50%</h6>
+            </div>
+            <div class="QuoteLanguage">
+                "For millions of years, mankind lived just like the animals. Then something happened which unleashed the power of our
+                imagination. We learned to talk."
+            </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/Tarea4_Proyecto_1_CV/js/3Languages.js"></script>
