--- a/Tarea4_Proyecto_1_CV/4Certifications.html
+++ b/Tarea4_Proyecto_1_CV/4Certifications.html
@@ -11,8 +11,100 @@
 
 <body>
     <div id="menu-placeholder"></div>
-    <div class="container">
-        <h1>CV Jorddy</h1>
+    <div class="contenedorImagen">
+        <img src="./img/pythonimg.jpg" class="contornoImagen">
+        <div class="contenedorImagenPalabras">
+            <div>
+                <div class="titulo">
+                    <h1 class="text">Certifications</h1>
+                </div>
+            </div>
+            <div>
+                <table>
+                    <thead>
+                        <tr class="elemento">
+                            <th>Certification</th>
+                            <th>Year</th>
+                            <th>Certificate ID</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="elemento2">
+                            <td>75-Hour Python 101 Software Engineering Course, Coding Nomads.</td>
+                            <td>2024</td>
+                            <td>b56e18d4190d4f6aa4c34ab3d95d5260</td>
+                        </tr>
+                        <tr class="elemento">
+                            <td>Git & GitHub 40-Hour Software Engineering Course, Coding Nomads.</td>
+                            <td>2024</td>
+                            <td>6372a7e21c0445619f00f1a9c8601e99</td>
+                        </tr>
+                        <tr class="elemento2">
+                            <td>REVIT Module I, CCC.</td>
+                            <td>2021</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento">
+                            <td>Real Estate and Mortgage Appraisals, CCC.</td>
+                            <td>2021</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento2">
+                            <td>Fundamentals for Carbon Neutrality in Organizations, INA.</td>
+                            <td>2020</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento">
+                            <td>Basic Occupational Health, INA.</td>
+                            <td>2020</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento2">
+                            <td>Basic First Aid, INA.</td>
+                            <td>2020</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento">
+                            <td>Construction Budgeting, CCC.</td>
+                            <td>2019</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento2">
+                            <td>Bank Appraisals, CFIA.</td>
+                            <td>2019</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento">
+                            <td>Building Information Modeling Analysis, CCC.</td>
+                            <td>2019</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento2">
+                            <td>Professional Bartender, National Association of Flair Bartenders.</td>
+                            <td>2016</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento">
+                            <td>NM Alcohol and Gaming Division Server, Way to Serve Training Program.</td>
+                            <td>2016</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento2">
+                            <td>Basic level in Portuguese, School of Modern Languages, Universidad de Costa Rica.</td>
+                            <td>2015</td>
+                            <td>-</td>
+                        </tr>
+                        <tr class="elemento">
+                            <td>English Program Regular Mode, Instituto Tecnológico de Costa Rica.
+</td>
+                            <td>2015</td>
+                            <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
