--- a/Tarea4_Proyecto_1_CV/4Certifications.html
+++ b/Tarea4_Proyecto_1_CV/4Certifications.html
@@ -30,75 +30,74 @@
                     </thead>
                     <tbody>
                         <tr class="elemento2">
-                            <td>75-Hour Python 101 Software Engineering Course, Coding Nomads.</td>
-                            <td>2024</td>
-                            <td>b56e18d4190d4f6aa4c34ab3d95d5260</td>
+                            <td class="btn-tran">75-Hour Python 101 Software Engineering Course, Coding Nomads.</td>
+                            <td class="btn-tran">2024</td>
+                            <td class="btn-tran">b56e18d4190d4f6aa4c34ab3d95d5260</td>
                         </tr>
                         <tr class="elemento">
-                            <td>Git & GitHub 40-Hour Software Engineering Course, Coding Nomads.</td>
-                            <td>2024</td>
-                            <td>6372a7e21c0445619f00f1a9c8601e99</td>
+                            <td class="btn-tran">Git & GitHub 40-Hour Software Engineering Course, Coding Nomads.</td>
+                            <td class="btn-tran">2024</td>
+                            <td class="btn-tran">6372a7e21c0445619f00f1a9c8601e99</td>
                         </tr>
                         <tr class="elemento2">
-                            <td>REVIT Module I, CCC.</td>
-                            <td>2021</td>
-                            <td>-</td>
+                            <td class="btn-tran">REVIT Module I, CCC.</td>
+                            <td class="btn-tran">2021</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
-                            <td>Real Estate and Mortgage Appraisals, CCC.</td>
-                            <td>2021</td>
-                            <td>-</td>
+                            <td class="btn-tran">Real Estate and Mortgage Appraisals, CCC.</td>
+                            <td class="btn-tran">2021</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento2">
-                            <td>Fundamentals for Carbon Neutrality in Organizations, INA.</td>
-                            <td>2020</td>
-                            <td>-</td>
+                            <td class="btn-tran">Fundamentals for Carbon Neutrality in Organizations, INA.</td>
+                            <td class="btn-tran">2020</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
-                            <td>Basic Occupational Health, INA.</td>
-                            <td>2020</td>
-                            <td>-</td>
+                            <td class="btn-tran">Basic Occupational Health, INA.</td>
+                            <td class="btn-tran">2020</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento2">
-                            <td>Basic First Aid, INA.</td>
-                            <td>2020</td>
-                            <td>-</td>
+                            <td class="btn-tran">Basic First Aid, INA.</td>
+                            <td class="btn-tran">2020</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
-                            <td>Construction Budgeting, CCC.</td>
-                            <td>2019</td>
-                            <td>-</td>
+                            <td class="btn-tran">Construction Budgeting, CCC.</td>
+                            <td class="btn-tran">2019</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento2">
-                            <td>Bank Appraisals, CFIA.</td>
-                            <td>2019</td>
-                            <td>-</td>
+                            <td class="btn-tran">Bank Appraisals, CFIA.</td>
+                            <td class="btn-tran">2019</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
-                            <td>Building Information Modeling Analysis, CCC.</td>
-                            <td>2019</td>
-                            <td>-</td>
+                            <td class="btn-tran">Building Information Modeling Analysis, CCC.</td>
+                            <td class="btn-tran">2019</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento2">
-                            <td>Professional Bartender, National Association of Flair Bartenders.</td>
-                            <td>2016</td>
-                            <td>-</td>
+                            <td class="btn-tran">Professional Bartender, National Association of Flair Bartenders.</td>
+                            <td class="btn-tran">2016</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
-                            <td>NM Alcohol and Gaming Division Server, Way to Serve Training Program.</td>
-                            <td>2016</td>
-                            <td>-</td>
+                            <td class="btn-tran">NM Alcohol and Gaming Division Server, Way to Serve Training Program.</td>
+                            <td class="btn-tran">2016</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento2">
-                            <td>Basic level in Portuguese, School of Modern Languages, Universidad de Costa Rica.</td>
-                            <td>2015</td>
-                            <td>-</td>
+                            <td class="btn-tran">Basic level in Portuguese, School of Modern Languages, Universidad de Costa Rica.</td>
+                            <td class="btn-tran">2015</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                         <tr class="elemento">
-                            <td>English Program Regular Mode, Instituto Tecnológico de Costa Rica.
-</td>
-                            <td>2015</td>
-                            <td>-</td>
+                            <td class="btn-tran">English Program Regular Mode, Instituto Tecnológico de Costa Rica.</td>
+                            <td class="btn-tran">2015</td>
+                            <td class="btn-tran">-</td>
                         </tr>
                     </tbody>
                 </table>
