--- a/Tarea4_Proyecto_1_CV/1Work_Experience.html
+++ b/Tarea4_Proyecto_1_CV/1Work_Experience.html
@@ -15,7 +15,7 @@
             <div class="contenedorImagenPalabras">
                 <div>
                     <div class="titulo">
-                        <h1 class="text">Work Experience</h1>
+                        <h1 class="text">WORK EXPERIENCE</h1>
                     </div>
                 </div>
                 <div>
