--- a/Tarea4_Proyecto_1_CV/3languages.html
+++ b/Tarea4_Proyecto_1_CV/3languages.html
@@ -14,7 +14,7 @@
     <div id="menu-placeholder"></div>
         <div class="container">
             <div class="titulo">
-                <h1 class="text">Languages</h1>
+                <h1 class="text">LANGUAGES</h1>
             </div>
             <div class="languageES">
                 <h3 class="text">Spanish</h3>
