--- a/Tarea4_Proyecto_1_CV/4Certifications.html
+++ b/Tarea4_Proyecto_1_CV/4Certifications.html
@@ -16,7 +16,7 @@
         <div class="contenedorImagenPalabras">
             <div>
                 <div class="titulo">
-                    <h1 class="text">Certifications</h1>
+                    <h1 class="text">CERTIFICATIONS</h1>
                 </div>
             </div>
             <div>
